<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Learn2crack.jsonparsing</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add_user">AddUserActivity</string>
    <string name="edit_message">First Name</string>
    <string name="edit_message0">Last Name</string>
    <string name="edit_message1">Email</string>
    <string name="edit_message2">Phone</string>
    <string name="title_activity_adduser">adduser</string>
    <string name="adduser">Save</string>
    <string name="contacts">Phone book</string>
    
    <string name="viewuser">Phone book</string>
    <string name="button_send0">Save</string>
    <string name="dispfname">First name</string>
        <string name="button_send1">Delete</string>
    <string name="title_activity_display_contact">DIsplayContactActivity</string>
    <string name="title_activity_del">DelActivity</string>
    <string name="green">#008000</string>

</resources>

