

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="contactbook.AddUserActivity"
    android:background="@drawable/background">
    
 <ImageView
        android:id="@+id/icon"
        android:layout_width="42px"
        android:layout_height="42px"
        android:layout_marginLeft="4px"
        android:layout_marginRight="10px"
        android:layout_marginTop="4px"
        android:src="@drawable/ic_launcher" >
    </ImageView>

    
    <TextView
        android:text="@string/contacts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/icon"
        android:textStyle="bold"
        android:textSize="20sp"
        android:typeface="sans"
		android:textColor="#d5f45d"
        />
    


    <EditText
        android:id="@+id/edit_message"
        android:layout_width= "match_parent"

        android:layout_weight="1"
        android:layout_height="wrap_content"

        android:hint="@string/edit_message"
        android:textColorHint="#bbbbbb"  
        android:textStyle="bold"
        android:textSize="24sp"
        android:typeface="sans"
        android:textColor="#FFFFFF"

        />

    <EditText
        android:id="@+id/edit_message0"
        android:layout_width= "match_parent"

        android:layout_weight="1"
        android:layout_height="wrap_content"

        android:hint="@string/edit_message0"
        android:textColorHint="#bbbbbb"  
        android:textStyle="bold"
        android:textSize="24sp"
        android:typeface="sans"
        android:textColor="#FFFFFF"

        />
    <EditText
        android:id="@+id/edit_message1"
        android:layout_width= "match_parent"

        android:layout_weight="1"
        android:layout_height="wrap_content"

        android:hint="@string/edit_message1"
		android:textColorHint="#bbbbbb"       
        android:textStyle="bold"
        android:textSize="24sp"
        android:typeface="sans"
        android:textColor="#FFFFFF"

        />
    <EditText
        android:id="@+id/edit_message2"
        android:layout_width= "match_parent"
		
        android:layout_weight="1"
        android:layout_height="wrap_content"

        android:hint="@string/edit_message2"
        android:textColorHint="#bbbbbb"  
        android:textStyle="bold"
        android:textSize="24sp"
        android:typeface="sans"
		android:textColor="#FFFFFF"
        />

    <Button
        android:id="@+id/adduser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#d5f45d"
        android:onClick="showMessage"
        android:text="@string/button_send0" />

</LinearLayout>


